--- a/advance_mosh/index.html
+++ b/advance_mosh/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/sytles.css" />
   </head>
   <body>
+    <a href="grid.html">GRID</a>
     <p class="para">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque
       perspiciatis, voluptates voluptatem et iusto eum? Temporibus dolorem
