--- a/advance_mosh/images/index.htm
+++ b/advance_mosh/images/index.htm
@@ -14,6 +14,35 @@
     <img class="meal" src="image/saturn.png" alt="" />
     <img class="meal" src="image/ufo.png" alt="" />
     <h1>Head</h1>
-    <img class="meal1" src="image/meal.jpg" alt="" />
+    <h2>Ansari</h2>
+    <h3>ALi</h3>
+    <!-- <img class="meal1" src="image/meal.jpg" alt="" /> -->
+    <!-- <img class="meal-length" src="image/meal.jpg" alt="" /> -->
+    <!-- <img
+      class="meal-length"
+      src="image/meal.jpg"
+      alt=""
+      srcset="image/meal.jpg 1x, image/meal@2x.jpg 2x, image/meal@3x.jgp 3x"
+      srcset="image/meal.jpg 1x, image/meal@2x.jpg 2x, image/meal@3x.jgp 3x"
+    /> -->
+    <!-- <img
+      class="meal-length"
+      src="image/meal.jpg"
+      alt=""
+      srcset="
+        image/meal.jpg     400w,
+        image/meal@2x.jpg  800w,
+        image/meal@3x.jgp 1200w
+      "
+      sizes="(max-width: 500px) 100vw,
+      (max-width: 700px) 50vw,
+      33vw"
+    /> -->
+    <!-- <picture>
+      <source media="(max-width: 500px)" srcset="image/meal-cropped.jgp" />
+      <source media="(min-width: 501px)" srcset="image/meal.jgp" />
+      <img src="image/meal.jpg" alt="" />
+    </picture> -->
+    <img class="ufo" src="image/ufo.svg" alt="" />
   </body>
 </html>
