images full done with icons

--- a/advance_mosh/images/index.htm
+++ b/advance_mosh/images/index.htm
@@ -6,6 +6,10 @@
     <title>Images</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/0b955312c3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <img class="meal" src="image/dishes.png" alt="" />
@@ -44,5 +48,6 @@
       <img src="image/meal.jpg" alt="" />
     </picture> -->
     <img class="ufo" src="image/ufo.svg" alt="" />
+    <span class="icons"><i class="fa-regular fa-user"></i></span>
   </body>
 </html>
