--- a/froms/text.html
+++ b/froms/text.html
@@ -5,10 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text in forms</title>
     <link rel="stylesheet" href="css/styles-text.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+    />
   </head>
   <body>
-    <form>
-      <input type="text" />
+    <form action="https://formspree.io/f/xgvwoawk" method="POST">
+      <input type="text" list="countries" />
+      <datalist id="countries">
+        <option data-value="1">pak</option>
+        <option>aus</option>
+        <option>eng</option>
+        <option>spn</option>
+        <option>italy</option>
+      </datalist>
+      <select>
+        <optgroup label="Front-end course">
+          <option value="1">HTML</option>
+          <option value="2">CSS</option>
+          <option value="3">JavaScript</option>
+        </optgroup>
+        <optgroup label="Back-end course">
+          <option value="1">Node.js</option>
+          <option value="2">ASP.Net</option>
+          <option value="3">Django</option>
+        </optgroup>
+      </select>
+      <textarea cols="30" rows="10">comments</textarea>
+      <div>
+        <input type="checkbox" name="" id="front-end" />
+        <label class="label-inline" for="front-end">Front-end</label>
+      </div>
+      <div>
+        <input type="checkbox" name="" id="back-end" checked />
+        <label class="label-inline" for="back-end">Back-end</label>
+      </div>
+      <div>
+        <input type="radio" name="membership" id="silver" />
+        <label class="label-inline" for="silver">Silver</label>
+      </div>
+      <div>
+        <input type="radio" name="membership" id="gold" />
+        <label class="label-inline" for="gold">Gold</label>
+      </div>
+      <input type="range" name="" id="" min="0" max="100" value="90" />
+      <input type="file" name="" id="" accept=".pdf, .jpg" />
+      <fieldset>
+        <legend>Ansari</legend>
+        <input type="text"/>
+        <input type="text"/>
+        <input type="text"/>
+      </fieldset>
+      <section>
+        <h4>Ali Raza</h4>
+        <input type="text"/>
+        <input type="text"/>
+        <input type="text"/>
+      </fieldset>
+      <input type="hidden" name="course-id" value="1234">
+      <label for="">data validation</label>
+    <input type="number" required min="0" max="10"> 
+      <input type="text" placeholder="Name" name="name" />
+      <input type="email" placeholder="Email" name="email" id="" />
+      <button type="submit">submit</button>
     </form>
   </body>
 </html>
