--- a/seriesch3/index.html
+++ b/seriesch3/index.html
@@ -30,5 +30,14 @@
       <li class="list__item">item 2</li>
       <li class="list__item">item 3</li>
     </ul>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
+    <button class="btn btn--primary">1st button</button>
+    <button class="btn btn--secondary btn--outline">2nd button</button>
+    <button class="btn btn--ancent btn--block">3rd button</button>
+    <input type="text" class="input" placeholder="Enter domain name here..." />
   </body>
 </html>
