till part 25 done

--- a/seriesch3/index.html
+++ b/seriesch3/index.html
@@ -39,5 +39,131 @@
     <button class="btn btn--secondary btn--outline">2nd button</button>
     <button class="btn btn--ancent btn--block">3rd button</button>
     <input type="text" class="input" placeholder="Enter domain name here..." />
+    <div class="input-group">
+      <button class="btn btn--ancent">Search</button>
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter domain name here..."
+      />
+    </div>
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum,
+          assumenda?
+        </div>
+      </div>
+    </div>
+    <div style="width: 30%; padding: 4rem">
+      <div class="plan plan--popular">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% OFF</span>
+            <span class="plan__description">East start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100 GB SSD Sotrage</li>
+              <li class="list__item">3 GB RAM</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#snap"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+          quisquam, ex nostrum vero voluptates dicta excepturi vel perspiciatis
+          consequuntur ab.
+        </p>
+      </div>
+    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, dolor
+        delectus exercitationem nihil laboriosam rem dolorem, voluptatum neque
+        quasi mollitia culpa animi, maxime dolore tenetur voluptatem tempore
+        fugit quos distinctio.
+      </p>
+    </blockquote>
+    <footer>
+      <div class="media">
+        <div class="media__image">
+          <svg class="icon icon--primary quote__line">
+            <use xlink:href="images/sprite.svg#line"></use>
+          </svg>
+        </div>
+        <div class="media__body">
+          <h3 class="media__title quote__author">John Smith</h3>
+          <p class="quote__organization">ABC Company</p>
+        </div>
+      </div>
+    </footer>
+    <div class="grid grid--1x3">
+      <div style="height: 100px; background: gold"></div>
+      <div style="height: 100px; background: dodgerblue"></div>
+      <div style="height: 100px; background: tomato"></div>
+    </div>
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="images/testimonial.jpg" alt="A happy and smiling man" />
+          <span class="icon-container icon-container--ancent">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quote">
+          <p class="quote__text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            optio officiis dolore earum error eaque perferendis laudantium sed
+            praesentium dolorum.
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title quote__author">John Smith</h3>
+                <p class="quote__organization">ABC Company</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+    <div class="callout callout--primary">
+      <div class="grid grid--1x2">
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to get started</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+            voluptas odit veniam ab quasi maiores, quia, in minus dignissimos
+            beatae eveniet rem officia illum sequi voluptatibus magnam nam?
+            Iste, deleniti!
+          </p>
+        </div>
+        <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
+      </div>
+    </div>
   </body>
 </html>
