--- a/seriesch3/index.html
+++ b/seriesch3/index.html
@@ -14,6 +14,28 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <nav class="nav collapsible collapsible--expanded">
+      <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+      <svg class="icon icon--white nav__toggler">
+        <use xlink:href="images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav__list collapsible__content">
+        <li class="nav__item"><a href="#">Hosting</a></li>
+        <li class="nav__item"><a href="#">VPS</a></li>
+        <li class="nav__item"><a href="#">Domain</a></li>
+        <li class="nav__item"><a href="#">Pricing</a></li>
+      </ul>
+    </nav>
+    <section class="block block--dark block--skewed-left">
+      <div class="container grid grid1x2">
+        <div class="hero__content">
+          <h1>Cloud Hosting for PROS</h1>
+          <p>Deploy your websites in less than 60 seconds.</p>
+          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+        </div>
+        <img src="images/banner.png" alt="" />
+      </div>
+    </section>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
@@ -165,5 +187,27 @@
         <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
       </div>
     </div>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--primary collapsible__chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+        accusamus.
+      </div>
+    </div>
+    <section class="block block--dark block--skewed-left">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+          laboriosam.
+        </p>
+      </header>
+    </section>
+    <script src="js/main.js"></script>
   </body>
 </html>
