till part 29 half done

--- a/seriesch3/index.html
+++ b/seriesch3/index.html
@@ -27,13 +27,15 @@
       </ul>
     </nav>
     <section class="block block--dark block--skewed-left">
-      <div class="container grid grid1x2">
+      <div class="container grid grid--1x2">
         <div class="hero__content">
-          <h1>Cloud Hosting for PROS</h1>
-          <p>Deploy your websites in less than 60 seconds.</p>
-          <a href="" class="btn btn--accent btn--stretched">Get Started</a>
+          <h1 class="block__heading">Cloud Hosting for PROS</h1>
+          <p class="hero__tagline">
+            Deploy your websites in less than 60 seconds.
+          </p>
+          <a href="" class="btn btn--ancent btn--stretched">Get Started</a>
         </div>
-        <img src="images/banner.png" alt="" />
+        <img class="hero__image" src="images/banner.png" alt="" />
       </div>
     </section>
     <h1>Heading 1</h1>
