footer done guys

--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -14,12 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-      inventore nostrum eum quidem ut, hic corporis facere nisi cum quaerat
-      doloribus veritatis dicta laudantium facilis accusamus aperiam eos magnam
-      dignissimos?
-    </p>
     <footer>
       <div class="div_full-block">
         <div class="block_div">
@@ -47,35 +41,111 @@
             </div>
           </div>
           <div class="dividerline-white"></div>
-            <div class="footer__content">
-                <div class="content_block_one">
-                    <div class="footer__content_block_one">
-                        <div class="block_one_heading">Best kept secrets ✨</div>
-                        <div class="block_one_content">Be the first to find out about the newest programs, workshops, and community activities - plus industry news, articles, and special reports. All delivered to your inbox!</div>
-                        <div class="footer_inputbutton">
-                            <form class="form-2">
-                                <input class="footer_input text-field" type="email" placeholder="Enter your email">
-                                <button class="btn gs-cta2 btn--accent" href="#">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
+          <div class="footer__content">
+            <div class="content_block">
+              <div class="content_block_one">
+                <div class="footer__content_block_one">
+                  <div class="block_one_heading">Best kept secrets ✨</div>
+                  <div class="block_one_content">
+                    Be the first to find out about the newest programs, workshops,
+                    and community activities - plus industry news, articles, and
+                    special reports. All delivered to your inbox!
+                  </div>
+                  <div class="footer_inputbutton">
+                    <form class="form-2">
+                      <input
+                        class="footer_input text-field"
+                        type="email"
+                        placeholder="Enter your email"
+                      />
+                      <button class="btn gs-cta2 btn--accent" href="#">
+                        Subscribe
+                      </button>
+                    </form>
+                  </div>
                 </div>
-                <div class="footer__social">
-                    <a href="https://www.facebook.com/"><img class="social__image" src="images/facebook.png" alt="" /></a>
-                    <a href="#"><img class="social__image" src="images/twitter.png" alt="" /></a>
-                    <a href="#"><img class="social__image" src="images/instagram.png" alt="" /></a>
-                    <a href="#"><img class="social__image" src="images/linkedin.png" alt="" /></a>
-                </div>
-                <div class="footer__logo">
-                  <img src="images/logo.svg" alt="" />
-                </div>
+              <div class="footer__social">
+                <a href="https://www.facebook.com/"
+                  ><img class="social__image" src="images/facebook.png" alt=""
+                /></a>
+                <a href="#"
+                  ><img class="social__image" src="images/twitter.png" alt=""
+                /></a>
+                <a href="#"
+                  ><img class="social__image" src="images/instagram.png" alt=""
+                /></a>
+                <a href="#"
+                  ><img class="social__image" src="images/linkedin.png" alt=""
+                /></a>
+              </div>
+              <div class="footer__logo">
+                <img src="images/logo.svg" alt="" />
+              </div>
+                            </div>
+                            <div class="footer__content_block_two">
+                  <div class="container grid footer__sections">
+                    <section class="footer__section">
+                        <h2 class="footer__heading block__heading">
+                          Industries
+                        </h2>
+                      </header>
+                      <div class="collapsible__content">
+                        <ul class="list">
+                          <li><a href="#">Marketing</a></li>
+                          <li><a href="#">Generative AI</a></li>
+                          <li><a href="#">Product</a></li>
+                          <li><a href="#">Design</a></li>
+                          <li><a href="#">Business</a></li>
+                          <li><a href="#">Tech & Data</a></li>
+                        </ul>
+                      </div>
+                    </section>
+                    <section class="footer__section">
+                        <h2 class="footer__heading block__heading">
+                          Roles
+                        </h2>
+                      <div class="collapsible__content">
+                        <ul class="list">
+                          <li><a href="#">Personal Growth</a></li>
+                          <li><a href="#">Founders</a></li>
+                        </ul>
+                      </div>
+                    </section>
+                    <section class="footer__section">
+                        <h2 class="footer__heading block__heading">
+                          Engage
+                        </h2>
+                      <div class="collapsible__content">
+                        <ul class="list">
+                          <li><a href="#">Upskill your Team</a></li>
+                          <li><a href="#">Learner's Center</a></li>
+                          <li><a href="#">Newsletter Vault</a></li>
+                          <li><a href="#">Apply as Mentor</a></li>
+                          <li><a href="#">Topics</a></li>
+                          <li><a href="#">Free Courses</a></li>
+                        </ul>
+                      </div>
+                    </section>
+                    <section class="footer__section">
+                        <h2 class="footer__heading block__heading">
+                          Company
+                        </h2>
+                      <div class="collapsible__content">
+                        <ul class="list">
+                          <li><a href="#">About Us</a></li>
+                          <li><a href="#">Careers</a></li>
+                          <li><a href="#">Contact Us</a></li>
+                          <li><a href="#">Refund Policy</a></li>
+                          <li><a href="#">Terms & Conditions</a></li>
+                          <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                      </div>
+                    </section>
+                  </div>
+                            </div>
             </div>
         </div>
-
-    <div class="footer__content_block_two"></div>
-</div>
-        </div>
-        <div class="footer__line_before">
+        <div class="footer__line_before"></div>
         <div class="footer__line">
           <p>&copy; 2024 Sisinty Pvt. Ltd. All rights reserved.</p>
           <p>
@@ -83,79 +153,6 @@
             Bengaluru, Karnataka, 560102
           </p>
         </div>
-      </div>
-    </footer>
-    <footer class="block block--dark footer">
-      <div class="container grid footer__sections">
-        <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading block__heading">
-              Products
-            </h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#growth"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Web Hosting</a></li>
-              <li><a href="#">Free Automated Wordpress</a></li>
-              <li><a href="#">Migration</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading block__heading">
-              Item Company
-            </h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#growth"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Affiliates</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading block__heading">
-              Support
-            </h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#growth"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Knowledge Base</a></li>
-              <li><a href="#">FAQ</a></li>
-            </ul>
-          </div>
-        </section>
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading block__heading">
-              Domains
-            </h2>
-            <svg class="icon icon--white collapsible__chevron">
-              <use xlink:href="images/sprite.svg#growth"></use>
-            </svg>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list">
-              <li><a href="#">Domain Checker</a></li>
-              <li><a href="#">Domain Transfer</a></li>
-              <li><a href="#">Free Domain</a></li>
-            </ul>
-          </div>
-        </section>
-        
       </div>
     </footer>
   </body>
