--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -13,147 +13,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <footer>
-      <div class="div_full-block">
-        <div class="block_div">
-          <div class="three_block_div">
-            <div class="linkedin_divs">
-              <img class="linkedin__image" src="images/linkedin.png" alt="" />
-              <div>
-                <h4>LinkedIn</h4>
-                <p>Top Startup 2023</p>
-              </div>
-            </div>
-            <div class="linkedin_divs">
-              <img class="linkedin__image" src="images/star.jpg" alt="" />
-              <div>
-                <h4>Trustpilot</h4>
-                <p>Rated 4.7/5 (4192)</p>
-              </div>
-            </div>
-            <div class="linkedin_divs">
-              <img class="linkedin__image" src="images/google.png" alt="" />
-              <div>
-                <h4>Google Reviews</h4>
-                <p>Rated 4.6/5 (3500+)</p>
-              </div>
-            </div>
-          </div>
-          <div class="dividerline-white"></div>
-          <div class="footer__content">
-            <div class="content_block">
-              <div class="content_block_one">
-                <div class="footer__content_block_one">
-                  <div class="block_one_heading">Best kept secrets ✨</div>
-                  <div class="block_one_content">
-                    Be the first to find out about the newest programs, workshops,
-                    and community activities - plus industry news, articles, and
-                    special reports. All delivered to your inbox!
-                  </div>
-                  <div class="footer_inputbutton">
-                    <form class="form-2">
-                      <input
-                        class="footer_input text-field"
-                        type="email"
-                        placeholder="Enter your email"
-                      />
-                      <button class="btn gs-cta2 btn--accent" href="#">
-                        Subscribe
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              <div class="footer__social">
-                <a href="https://www.facebook.com/"
-                  ><img class="social__image" src="images/facebook.png" alt=""
-                /></a>
-                <a href="#"
-                  ><img class="social__image" src="images/twitter.png" alt=""
-                /></a>
-                <a href="#"
-                  ><img class="social__image" src="images/instagram.png" alt=""
-                /></a>
-                <a href="#"
-                  ><img class="social__image" src="images/linkedin.png" alt=""
-                /></a>
-              </div>
-              <div class="footer__logo">
-                <img src="images/logo.svg" alt="" />
-              </div>
-                            </div>
-                            <div class="footer__content_block_two">
-                  <div class="container grid footer__sections">
-                    <section class="footer__section">
-                        <h2 class="footer__heading block__heading">
-                          Industries
-                        </h2>
-                      </header>
-                      <div class="collapsible__content">
-                        <ul class="list">
-                          <li><a href="#">Marketing</a></li>
-                          <li><a href="#">Generative AI</a></li>
-                          <li><a href="#">Product</a></li>
-                          <li><a href="#">Design</a></li>
-                          <li><a href="#">Business</a></li>
-                          <li><a href="#">Tech & Data</a></li>
-                        </ul>
-                      </div>
-                    </section>
-                    <section class="footer__section">
-                        <h2 class="footer__heading block__heading">
-                          Roles
-                        </h2>
-                      <div class="collapsible__content">
-                        <ul class="list">
-                          <li><a href="#">Personal Growth</a></li>
-                          <li><a href="#">Founders</a></li>
-                        </ul>
-                      </div>
-                    </section>
-                    <section class="footer__section">
-                        <h2 class="footer__heading block__heading">
-                          Engage
-                        </h2>
-                      <div class="collapsible__content">
-                        <ul class="list">
-                          <li><a href="#">Upskill your Team</a></li>
-                          <li><a href="#">Learner's Center</a></li>
-                          <li><a href="#">Newsletter Vault</a></li>
-                          <li><a href="#">Apply as Mentor</a></li>
-                          <li><a href="#">Topics</a></li>
-                          <li><a href="#">Free Courses</a></li>
-                        </ul>
-                      </div>
-                    </section>
-                    <section class="footer__section">
-                        <h2 class="footer__heading block__heading">
-                          Company
-                        </h2>
-                      <div class="collapsible__content">
-                        <ul class="list">
-                          <li><a href="#">About Us</a></li>
-                          <li><a href="#">Careers</a></li>
-                          <li><a href="#">Contact Us</a></li>
-                          <li><a href="#">Refund Policy</a></li>
-                          <li><a href="#">Terms & Conditions</a></li>
-                          <li><a href="#">Privacy Policy</a></li>
-                        </ul>
-                      </div>
-                    </section>
-                  </div>
-                            </div>
-            </div>
-        </div>
-        <div class="footer__line_before"></div>
-        <div class="footer__line">
-          <p>&copy; 2024 Sisinty Pvt. Ltd. All rights reserved.</p>
-          <p>
-            4th Floor Urban Vault 145, 5th Main Rd, Sector 6, HSR Layout,
-            Bengaluru, Karnataka, 560102
-          </p>
-        </div>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
