file name change for adding it or depolying it into netlify

--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -14,46 +14,36 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="collection_item_5">
-      <div class="short_program_card is_masterclasses is_buynow">
-        <div class="card_content_div is_workshop">
-          <div class="card_content">
-            <h3 class="short_card_heading">Socail Media Marketing</h3>
-          </div>
-          <div class="card_content_block is_extensive"></div>
-        </div>
-        <div class="card_mentor">
-          <div class="mentor_pic">
-            <img
-              alt
-              src="https://cdn.prod.website-files.com/624629162e6c5c363b391aee/64e2e211afe3bbe1854caeae_Nikhil.webp"
-              sizes="100vw"
-              class="mentor_image"
-            />
-          </div>
-          <div class="mentor_info">
-            <div class="text-block-265 mentor_name">Ali Raza</div>
-            <div class="mentor_desgination">
-              <div class="text-block-266">Head of Brand</div>
-              <div class="text-block-266">&nbsp;-&nbsp;</div>
-              <div class="text-block-266">Even</div>
+    <div class="self_placed_program">
+      <div class="page_padding2">
+        <div class="self_placed_heading">
+          <div class="self_placed_header">
+            <div class="self_heading">
+              <h2 class="style_h3 program_type_name">Self Paced Programs</h2>
+              <div class="text-block-263">
+                Self-paced programs to give you a great overview
+              </div>
             </div>
           </div>
-        </div>
-        <div class="preview_link is_masterclass">
-          <div>Preview</div>
-          <div class="icon_1x1_atom w-embed">
-            <svg
-              width="100%"
-              viewBox="0 0 20 20"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M17 3V16.1578H13.3849V9.99409L6.36671 17L3 14.0002L10.3965 6.60882H3.33928V3L17 3Z"
-                fill="currentColor"
-              ></path>
-            </svg>
+          <div class="self_placed_button">
+            <div class="w_dyn_item">
+              <a href="#" class="gs_cat2 400_weighjt w_inline_block">
+                <div>Get all these courses with GS Pro Membership</div>
+                <div class="html_embed_90 w-embed">
+                  <svg
+                    width="100%"
+                    viewBox="0 0 20 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M17 3V16.1578H13.3849V9.99409L6.36671 17L3 14.0002L10.3965 6.60882H3.33928V3L17 3Z"
+                      fill="currentColor"
+                    ></path>
+                  </svg>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
