features tag work

--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -14,35 +14,78 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="self_placed_program">
-      <div class="page_padding2">
-        <div class="self_placed_heading">
-          <div class="self_placed_header">
-            <div class="self_heading">
-              <h2 class="style_h3 program_type_name">Self Paced Programs</h2>
-              <div class="text-block-263">
-                Self-paced programs to give you a great overview
-              </div>
-            </div>
-          </div>
-          <div class="self_placed_button">
-            <div class="w_dyn_item">
-              <a href="#" class="gs_cat2 400_weighjt w_inline_block">
-                <div>Get all these courses with GS Pro Membership</div>
-                <div class="html_embed_90 w-embed">
-                  <svg
-                    width="100%"
-                    viewBox="0 0 20 20"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M17 3V16.1578H13.3849V9.99409L6.36671 17L3 14.0002L10.3965 6.60882H3.33928V3L17 3Z"
-                      fill="currentColor"
-                    ></path>
-                  </svg>
+    <div class="feature_section">
+      <div class="feature_component category component">
+        <div class="page_padding2 feature_heading">
+          <h2 class="style_h3">Featured</h2>
+        </div>
+        <div class="investor_component is_featured">
+          <div class="investor_block">
+            <div class="investor_horizontal">
+              <div
+                class="track_horizontal_1"
+                style="
+                  transform: translate3d(-12.495%, 0px, 0px) scale3d(1, 1, 1)
+                    rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+                  transform-style: preserve-3d;
+                  will-change: transform;
+                "
+              >
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
                 </div>
-              </a>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa7325b6cc6c2f7f1c41_Vector%20(15).svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="investor_logo">
+                  <img
+                    src="https://cdn.prod.website-files.com/624194472db3153002097068/6245aa1d0d0d5c2eced32858_YOURSTORY.svg"
+                    alt=""
+                  />
+                </div>
+              </div>
             </div>
           </div>
         </div>
