still confused section done

--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- Self Paced Programs Section -->
     <div class="section_self_placed">
       <div class="self_placed_program">
         <div class="page_padding2">
@@ -907,6 +908,7 @@
         </div>
       </div>
     </div>
+    <!-- Feature -->
     <div class="feature_section">
       <div class="feature_component category_component">
         <div class="page_padding2 feature_heading">
@@ -978,6 +980,7 @@
         </div>
       </div>
     </div>
+    <!-- footer -->
     <footer>
       <div class="div_full-block">
         <div class="block_div">
