--- a/demo_web/index2.html
+++ b/demo_web/index2.html
@@ -1140,6 +1140,33 @@
             </div>
           </div>
         </div>
+        <a href="#" class="quiz_banner industry_page">
+          <div class="quiz_image">
+            <div class="still_confused_diz">
+              <div class="still_confused">Still Confused?</div>
+              <div class="next_step_quiz">
+                <div>Take the Next Step Quiz</div>
+                <div class="icon_1x1_atom w-embed">
+                  <svg
+                    width="15"
+                    height="17"
+                    viewBox="0 0 15 17"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M14.9915 8.49928L7.36188 16.1289L5.32654 14.0935L8.90059 10.5195L0.886943 10.6306L0.730906 6.99566L9.18105 6.87403L5.20781 2.90078L7.30039 0.808204L14.9915 8.49928Z"
+                      fill="#37ed81"
+                    ></path>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="next_step_image">
+              <img src="images/quiz.svg" alt="" />
+            </div>
+          </div>
+        </a>
       </div>
     </div>
   </body>
